Add contact information

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<html>
+  <body>
+    Contact Information: <br />
+    Name: Ben Fung <br />
+    Email: future28uk2021@gmail.com<br />
+  </body>
+</html>
